# build_system_cs1010

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  prog1  prog1.cpp  test.py
